RESOLVED FIXED66356
Represent RenderStyle::textOverflow property using an enum instead of a bool.
https://bugs.webkit.org/show_bug.cgi?id=66356
Summary Represent RenderStyle::textOverflow property using an enum instead of a bool.
Luke Macpherson
Reported 2011-08-16 17:25:34 PDT
Represent RenderStyle::textOverflow property using an enum instead of a bool.
Attachments
Patch (7.57 KB, patch)
2011-08-16 17:29 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2011-08-16 17:29:58 PDT
mitz
Comment 2 2011-08-16 18:14:47 PDT
Comment on attachment 104130 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=104130&action=review It would be nicer if you also changed the one or two places in rendering code that query this property to use the enum. > Source/WebCore/rendering/style/RenderStyleConstants.h:437 > +enum TextOverflow { TextOverflowClip = 0, TextOverflowEllipsis }; Why the = 0?
Luke Macpherson
Comment 3 2011-08-16 18:24:58 PDT
Comment on attachment 104130 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=104130&action=review >> Source/WebCore/rendering/style/RenderStyleConstants.h:437 >> +enum TextOverflow { TextOverflowClip = 0, TextOverflowEllipsis }; > > Why the = 0? Existing code does if (style()->textOverflow()), so it's a good idea to make the behavior of a cast from TextOverflow to boolean explicit.
WebKit Review Bot
Comment 4 2011-08-16 21:51:39 PDT
Comment on attachment 104130 [details] Patch Clearing flags on attachment: 104130 Committed r93195: <http://trac.webkit.org/changeset/93195>
WebKit Review Bot
Comment 5 2011-08-16 21:51:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.