Represent RenderStyle::textOverflow property using an enum instead of a bool. https://bugs.webkit.org/show_bug.cgi?id=66356

Reviewed by Dan Bernstein.

No new tests - no behavioral changes.

* css/CSSPrimitiveValueMappings.h:
(WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
Support cast from TextOverflow to CSSPrimitiveValue.
(WebCore::CSSPrimitiveValue::operator TextOverflow):
Support cast from CSSPrimitiveValue to TextOverflow.
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyProperty):
Use HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE macro for text overflow.
* rendering/style/RenderStyle.h:
(WebCore::InheritedFlags::textOverflow):
Return TextOverflow enum.
(WebCore::InheritedFlags::setTextOverflow):
Accept TextOverflow enum parameter.
(WebCore::InheritedFlags::initialTextOverflow):
Return TextOverflowClip.
* rendering/style/RenderStyleConstants.h:
Define TextOverflow enum.
* rendering/style/StyleRareNonInheritedData.h:
Change representation of text overflow from bool to one-bit unsigned.


Canonical link: https://commits.webkit.org/82197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93195 268f45cc-cd09-0410-ab3c-d52691b4dbfc